--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,75 @@
+accelerate==1.10.1
+aiohappyeyeballs==2.6.1
+aiohttp==3.13.0
+aiosignal==1.4.0
 anyio==4.10.0
+attrs==25.4.0
 certifi==2025.8.3
+charset-normalizer==3.4.3
 cloudpickle==3.1.1
+datasets==4.1.1
+dill==0.4.0
+filelock==3.20.0
+frozenlist==1.8.0
+fsspec==2025.9.0
 grpcio==1.71.0
 grpcio-tools==1.71.0
 h11==0.16.0
+hf-xet==1.1.10
 httpcore==1.0.9
 httpx==0.28.1
+huggingface-hub==0.35.3
 idna==3.10
+Jinja2==3.1.6
+MarkupSafe==3.0.3
+modelscope==1.30.0
+mpmath==1.3.0
+multidict==6.7.0
+multiprocess==0.70.16
+networkx==3.5
 numpy==2.2.6
+nvidia-cublas-cu12==12.8.4.1
+nvidia-cuda-cupti-cu12==12.8.90
+nvidia-cuda-nvrtc-cu12==12.8.93
+nvidia-cuda-runtime-cu12==12.8.90
+nvidia-cudnn-cu12==9.10.2.21
+nvidia-cufft-cu12==11.3.3.83
+nvidia-cufile-cu12==1.13.1.3
+nvidia-curand-cu12==10.3.9.90
+nvidia-cusolver-cu12==11.7.3.90
+nvidia-cusparse-cu12==12.5.8.93
+nvidia-cusparselt-cu12==0.7.1
+nvidia-nccl-cu12==2.27.3
+nvidia-nvjitlink-cu12==12.8.93
+nvidia-nvtx-cu12==12.8.90
 opencv-python==4.12.0.88
+packaging==25.0
+pandas==2.3.3
+peft==0.17.1
+propcache==0.4.1
 protobuf==5.29.5
+psutil==7.1.0
+pyarrow==21.0.0
 pydantic==1.10.8
+python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
+pytz==2025.2
+PyYAML==6.0.3
 pyzmq==27.1.0
+regex==2025.9.18
+requests==2.32.5
+safetensors==0.6.2
 setuptools==80.9.0
+six==1.17.0
 sniffio==1.3.1
+sympy==1.14.0
+tokenizers==0.22.1
+torch==2.8.0
+tqdm==4.67.1
+transformers==4.57.0
+triton==3.4.0
 typing_extensions==4.15.0
+tzdata==2025.2
+urllib3==2.5.0
+xxhash==3.6.0
+yarl==1.22.0
