--- a/requirements.txt
+++ b/requirements.txt
@@ -1,228 +1,76 @@
-aiofiles==0.8.0
-alabaster==0.7.13
-anyio==3.6.2
-appdirs==1.4.4
-argcomplete==1.8.1
-argon2-cffi==21.3.0
-argon2-cffi-bindings==21.2.0
-arrow==1.2.3
-asgiref==3.5.0
-asttokens==2.2.1
-async-generator==1.10
-attrs==22.2.0
-Automat==20.2.0
-Babel==2.12.1
-backcall==0.2.0
-bcrypt==3.2.0
-beautifulsoup4==4.11.2
-black==23.1.0
-bleach==6.0.0
-blinker==1.4
-Brlapi==0.8.3
-bs4==0.0.1
-caffeine==2.9.8
-certifi==2020.6.20
-cffi==1.15.1
-chardet==4.0.0
-click==8.0.3
-cmake-annotate==0.6.13
-cmake-format==0.6.13
-cmake-lint==0.6.13
-cmake-parse==0.6.13
-cmakelang==0.6.13
-colorama==0.4.4
-comm==0.1.2
-command-not-found==0.3
-configobj==5.0.6
-constantly==15.1.0
-contourpy==1.0.6
-coolercontrol-liqctld==2.2.2
-cryptography==3.4.8
-cupshelpers==1.0
-curio==1.6
-cycler==0.11.0
-dbus-python==1.2.18
-debugpy==1.6.6
-decorator==5.1.1
-defer==1.0.6
-defusedxml==0.7.1
-distro==1.7.0
-distro-info==1.1+ubuntu0.2
-docopt==0.6.2
-docrepr==0.2.0
-docutils==0.18.1
-entrypoints==0.4
-evdev==1.6.0
-ewmh==0.1.6
-exceptiongroup==1.1.1
-executing==1.2.0
-fastapi==0.63.0
-fastjsonschema==2.16.3
-fonttools==4.38.0
-fqdn==1.5.1
+accelerate==1.10.1
+aiohappyeyeballs==2.6.1
+aiohttp==3.13.0
+aiosignal==1.4.0
+anyio==4.10.0
+attrs==25.4.0
+bitsandbytes==0.48.1
+certifi==2025.8.3
+charset-normalizer==3.4.3
+cloudpickle==3.1.1
+datasets==4.1.1
+dill==0.4.0
+filelock==3.20.0
+frozenlist==1.8.0
+fsspec==2025.9.0
 grpcio==1.71.0
 grpcio-tools==1.71.0
-gyp==0.1
-h11==0.13.0
-hidapi==0.9.0.post3
-httpcore==1.0.7
-httplib2==0.20.2
+h11==0.16.0
+hf-xet==1.1.10
+httpcore==1.0.9
 httpx==0.28.1
-hyperlink==21.0.0
-idna==3.3
-imagesize==1.4.1
-importlib-metadata==4.6.4
-incremental==21.3.0
-iniconfig==2.0.0
-inotify-simple==1.3.5
-ipykernel==6.21.3
-ipyparallel==8.4.1
-ipython==8.11.0
-ipython-genutils==0.2.0
-ipywidgets==8.0.4
-isoduration==20.11.0
-itsdangerous==2.1.0
-jedi==0.18.2
-jeepney==0.7.1
-jieba==0.42.1
-Jinja2==3.1.2
-jsonpointer==2.3
-keyring==23.5.0
-kiwisolver==1.4.4
-language-selector==0.1
-launchpadlib==1.10.16
-lazr.restfulclient==0.14.4
-lazr.uri==1.0.6
-liquidctl==1.5.1
-louis==3.20.0
-lxml==4.9.2
-macaroonbakery==1.3.1
-MarkupSafe==2.1.2
-matplotlib==3.6.2
-matplotlib-inline==0.1.6
-mininet==2.3.0
-mistune==2.0.5
-more-itertools==8.10.0
-mypy-extensions==1.0.0
-nbclassic==0.5.3
-nbclient==0.7.2
-nbconvert==7.2.10
-nbformat==5.7.3
-nest-asyncio==1.5.6
-netifaces==0.11.0
-notebook==6.5.3
-notebook_shim==0.2.2
-numpy==1.24.3
-oauthlib==3.2.0
-olefile==0.46
-opencv-python==4.7.0.72
-outcome==1.2.0
-ovs==2.17.9
-packaging==23.0
-pandocfilters==1.5.0
-parso==0.8.3
-pathspec==0.11.1
-pexpect==4.8.0
-pickleshare==0.7.5
-Pillow==9.0.1
-platformdirs==3.1.1
-pluggy==1.0.0
-prometheus-client==0.16.0
-prompt-toolkit==3.0.38
-protobuf==5.29.4
-psutil==5.9.0
-ptyprocess==0.7.0
-pure-eval==0.2.2
-py==1.11.0
-pyasn1==0.4.8
-pyasn1-modules==0.2.1
-pycairo==1.20.1
-pycparser==2.21
-pycups==2.0.1
+huggingface-hub==0.35.3
+idna==3.10
+Jinja2==3.1.6
+MarkupSafe==3.0.3
+modelscope==1.30.0
+mpmath==1.3.0
+multidict==6.7.0
+multiprocess==0.70.16
+networkx==3.5
+numpy==2.2.6
+nvidia-cublas-cu12==12.8.4.1
+nvidia-cuda-cupti-cu12==12.8.90
+nvidia-cuda-nvrtc-cu12==12.8.93
+nvidia-cuda-runtime-cu12==12.8.90
+nvidia-cudnn-cu12==9.10.2.21
+nvidia-cufft-cu12==11.3.3.83
+nvidia-cufile-cu12==1.13.1.3
+nvidia-curand-cu12==10.3.9.90
+nvidia-cusolver-cu12==11.7.3.90
+nvidia-cusparse-cu12==12.5.8.93
+nvidia-cusparselt-cu12==0.7.1
+nvidia-nccl-cu12==2.27.3
+nvidia-nvjitlink-cu12==12.8.93
+nvidia-nvtx-cu12==12.8.90
+opencv-python==4.12.0.88
+packaging==25.0
+pandas==2.3.3
+peft==0.17.1
+propcache==0.4.1
+protobuf==5.29.5
+psutil==7.1.0
+pyarrow==21.0.0
 pydantic==1.10.8
-pygame==2.1.2
-Pygments==2.14.0
-PyGObject==3.42.1
-PyHamcrest==2.0.2
-PyJWT==2.3.0
-pymacaroons==0.13.0
-PyNaCl==1.5.0
-pyOpenSSL==21.0.0
-pyparsing==2.4.7
-pyRFC3339==1.1
-pyrsistent==0.19.3
-pytest==6.2.5
-pytest-asyncio==0.20.3
-python-apt==2.4.0+ubuntu4
-python-dateutil==2.8.1
-python-debian==0.1.43+ubuntu1.1
+python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
-python-json-logger==2.0.7
-python-magic==0.4.24
-python-xlib==0.33
-pytz==2022.1
-pyusb==1.2.1.post1
-pyxdg==0.27
-PyYAML==5.4.1
-pyzmq==25.0.1
-qtconsole==5.4.1
-QtPy==2.3.0
-reportlab==3.6.8
-requests==2.25.1
-rfc3339-validator==0.1.4
-rfc3986-validator==0.1.1
-screen-resolution-extra==0.0.0
-SecretStorage==3.3.1
-service-identity==18.1.0
-setproctitle==1.2.2
-simplejson==3.17.6
-six==1.16.0
-sniffio==1.3.0
-snowballstemmer==2.2.0
-sortedcontainers==2.4.0
-sos==4.8.2
-soupsieve==2.3.2.post1
-Sphinx==6.1.3
-sphinx-rtd-theme==1.2.0
-sphinxcontrib-applehelp==1.0.4
-sphinxcontrib-devhelp==1.0.2
-sphinxcontrib-htmlhelp==2.0.1
-sphinxcontrib-jquery==4.1
-sphinxcontrib-jsmath==1.0.1
-sphinxcontrib-qthelp==1.0.3
-sphinxcontrib-serializinghtml==1.1.5
-ssh-import-id==5.11
-stack-data==0.6.2
-starlette==0.18.0
-systemd-python==234
-terminado==0.17.1
-terminator==2.1.1
-testpath==0.6.0
-tinycss2==1.2.1
-toml==0.10.2
-tomli==2.0.1
-tornado==6.2
-traitlets==5.9.0
-trio==0.22.0
-Twisted==22.1.0
-typing_extensions==4.5.0
-ubuntu-drivers-common==0.0.0
-ubuntu-pro-client==8001
-ufw==0.36.1
-unattended-upgrades==0.1
-uri-template==1.2.0
-urllib3==1.26.5
-uvicorn==0.15.0
-vboxapi==1.0
-wadllib==1.3.6
-wcwidth==0.2.6
-webencodings==0.5.1
-widgetsnbextension==4.0.5
-wordcloud==1.8.2.2
-wsproto==1.0.0
-xdg==5
-xkit==0.0.0
-xlib==0.21
-zipp==1.0.0
-zope.interface==5.4.0
-bitsandbytes==0.48.1
+pytz==2025.2
+PyYAML==6.0.3
+pyzmq==27.1.0
+regex==2025.9.18
+requests==2.32.5
+safetensors==0.6.2
+setuptools==80.9.0
+six==1.17.0
+sniffio==1.3.1
+sympy==1.14.0
+tokenizers==0.22.1
+torch==2.8.0
+tqdm==4.67.1
+transformers==4.57.0
+triton==3.4.0
+typing_extensions==4.15.0
+tzdata==2025.2
+urllib3==2.5.0
+xxhash==3.6.0
+yarl==1.22.0
