--- a/requirements.txt
+++ b/requirements.txt
@@ -43,10 +43,11 @@ nvidia-cusparselt-cu12==0.7.1
 nvidia-nccl-cu12==2.27.3
 nvidia-nvjitlink-cu12==12.8.93
 nvidia-nvtx-cu12==12.8.90
-opencv-python==4.12.0.88
+opencv-python-headless==4.12.0.88
 packaging==25.0
 pandas==2.3.3
 peft==0.17.1
+pillow==11.3.0
 propcache==0.4.1
 protobuf==5.29.5
 psutil==7.1.0
@@ -66,6 +67,7 @@ sniffio==1.3.1
 sympy==1.14.0
 tokenizers==0.22.1
 torch==2.8.0
+torchvision==0.23.0
 tqdm==4.67.1
 transformers==4.57.0
 triton==3.4.0
